2005-01-17  Diego Novillo  <dnovillo@redhat.com>

	PR tree-optimization/19121
	* gcc.c-torture/compile/pr19121.c: New test.

2005-01-17  James E. Wilson  <wilson@specifixinc.com>

	PR target/19357
	* gcc.c-torture/compile/pr19357.c: New test.

2005-01-17  Ian Lance Taylor  <ian@airs.com>

	PR c/5675
	* gcc.dg/c90-const-expr-3.c: Remove xfails on tests which now
	pass--those that refer just to the variable, possibly with a
	cast.
	* gcc.dg/c99-const-expr-3.c: Likewise.

	PR middle-end/13127
	* gcc.dg/20040206-1.c: Remove xfail on bogus warning which is no
	longer emitted.

2005-01-16  Bud Davis  <bdavis9659@comcast.net>

	PR fortran/18778
	* gfortran.dg/endfile_2.f90: New test.

2005-01-16  Steven G. Kargl  <kargls@comcast.net>

	PR 19168
	* gfortran.dg/select_5.f90: New test.

2004-01-16  Paul Brook  <paul@codesourcery.com>

	* gfortran.dg/common_4.f90: New test.

2005-01-15  Hans-Peter Nilsson  <hp@axis.com>

	PR rtl-optimization/19462
	* gcc.dg/torture/pr19462-1.c: New test.

2005-01-15  Ziemowit Laski  <zlaski@apple.com>

	PR objc/19321
	* objc.dg/func-ptr-2.m: New.
	* objc.dg/volatile-1.m: New.

2005-01-15  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* gcc.dg/20040813-1.c: Add hppa*64*-*-* to no stabs list.

2005-01-15  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/19060
	* gcc.c-torture/execute/20050104-1.c: New test.

2005-01-15  Bud Davis  <bdavis9659@comcast.net>

	PR fortran/18983
	* gfortran.dg/write_to_null.f90: New test.

2005-01-14  Andrew Pinski  <pinskia@physics.uc.edu>
            John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR other/19328
	* gcc.dg/attr-alias-2.c: dg-require-alias takes an
	argument.

2005-01-15  Jakub Jelinek  <jakub@redhat.com>

	PR c++/19263
	* g++.dg/init/vector1.C: New test.

2005-01-14  James E. Wilson  <wilson@specifixinc.com>

	PR target/13158
	* gcc.target/ia64/sibcall-unwind-1.c: New test.
	PR target/18987
	* gcc.target/ia64/sibcall-unwind-2.c: New test.
