@@ -1,5 +1,5 @@
 ; Options for the C, ObjC, C++ and ObjC++ front ends.
-; Copyright (C) 2003, 2004 Free Software Foundation, Inc.
+; Copyright (C) 2003, 2004, 2005 Free Software Foundation, Inc.
 ;
 ; This file is part of GCC.
 ;
@@ -429,6 +429,10 @@ Do not warn about using variadic macros when -pedantic
 Wwrite-strings
 C ObjC C++ ObjC++
 Give strings the type \"array of char\"
+
+Wpointer-sign
+C ObjC Var(warn_pointer_sign) Init(1)
+Warn when a pointer differs in signedness in an assignment.
 
 ansi
 C ObjC C++ ObjC++
