@@ -1,3 +1,7 @@
+2005-01-18  Michael Matz  <matz@suse.de>
+
+	* gcc.dg/Wno-pointer-sign.c: New test for -Wno-pointer-sign.
+
 2005-01-17  Diego Novillo  <dnovillo@redhat.com>
 
 	PR tree-optimization/19121
